<?xml version="1.0"?>
<package>
  <name>scout_gazebo</name>
  <version>0.0.1</version>
  <description>AgileX Scout Simulator bringup</description>

  <author email="jrkwon@umich.edu">Jaerock Kwon</author>
  <maintainer email="jrkwon@umich.edu">Jaerock Kwon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>scout_description</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
